Edited Payment text

--- a/src/roomease/payment/AddPayments.form
+++ b/src/roomease/payment/AddPayments.form
@@ -158,7 +158,7 @@
               <Color blue="59" green="ec" red="f7" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
-            <Property name="text" type="java.lang.String" value="Complaint description"/>
+            <Property name="text" type="java.lang.String" value="Payment Description"/>
           </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane4">
