--- a/src/roomease/complaints/ComplaintsPage.form
+++ b/src/roomease/complaints/ComplaintsPage.form
@@ -120,7 +120,7 @@
                     <Column editable="false" title="Status" type="java.lang.Object"/>
                   </Table>
                 </Property>
-                <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+                <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="complaintsTable.setAutoCreateRowSorter(true);">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="100" minWidth="40" prefWidth="40" resizable="true">
                       <Title/>
