--- a/src/roomease/payment/AddPayments.form
+++ b/src/roomease/payment/AddPayments.form
@@ -195,7 +195,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="0">
-                    <Column editable="true" title="Rental ID" type="java.lang.Integer"/>
+                    <Column editable="false" title="Rental ID" type="java.lang.Integer"/>
                     <Column editable="false" title="Tenant ID" type="java.lang.Integer"/>
                     <Column editable="false" title="Room" type="java.lang.String"/>
                     <Column editable="false" title="Check in" type="java.lang.Object"/>
@@ -203,7 +203,7 @@
                     <Column editable="false" title="Amount" type="java.lang.Double"/>
                   </Table>
                 </Property>
-                <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+                <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="rentalsTable.setAutoCreateRowSorter(true);">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
