--- a/src/roomease/rents/RoomCheck.form
+++ b/src/roomease/rents/RoomCheck.form
@@ -145,8 +145,27 @@
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="Room #" type="java.lang.Integer"/>
                     <Column editable="false" title="Room Price" type="java.lang.Double"/>
-                    <Column editable="true" title="Description" type="java.lang.String"/>
+                    <Column editable="false" title="Description" type="java.lang.String"/>
                   </Table>
+                </Property>
+                <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="roomsTable.setAutoCreateRowSorter(true);">
+                  <TableColumnModel selectionModel="0">
+                    <Column maxWidth="70" minWidth="-1" prefWidth="70" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="100" minWidth="-1" prefWidth="100" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                  </TableColumnModel>
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
                 <Property name="showGrid" type="boolean" value="true"/>
