--- a/src/roomease/homepage/EmployeeHome.form
+++ b/src/roomease/homepage/EmployeeHome.form
@@ -174,7 +174,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Rental Edit"/>
+            <Property name="text" type="java.lang.String" value="Rentals"/>
             <Property name="focusPainted" type="boolean" value="false"/>
           </Properties>
           <Events>
@@ -186,7 +186,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Tenant Edit"/>
+            <Property name="text" type="java.lang.String" value="Tenants"/>
             <Property name="focusPainted" type="boolean" value="false"/>
           </Properties>
           <Events>
