--- a/src/roomease/rents/EditRental.form
+++ b/src/roomease/rents/EditRental.form
@@ -69,9 +69,9 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="amountField" max="32767" attributes="0"/>
                       <Component id="CheckInDate" pref="150" max="32767" attributes="0"/>
-                      <Component id="CheckOutDate" max="32767" attributes="0"/>
+                      <Component id="CheckOutDate" pref="157" max="32767" attributes="0"/>
+                      <Component id="amountField" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
               </Group>
@@ -95,8 +95,8 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="amountField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="priceLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="amountField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -199,14 +199,13 @@
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="amountField">
           <Properties>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="75" green="63" red="8" type="rgb"/>
-            </Property>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
               <Format format="#0.00" subtype="-1" type="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="0.00"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="amountField.setValue(rental.getTotal_amount());"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
