--- a/src/roomease/payment/EditPayments.form
+++ b/src/roomease/payment/EditPayments.form
@@ -150,7 +150,7 @@
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="room.getDescription()" type="code"/>
+                  <Connection code="payment.getDescription()" type="code"/>
                 </Property>
               </Properties>
             </Component>
